@@ -526,7 +526,7 @@ void setupPulsesPPM16( uint8_t proto )
 }
 
 
-prog_uint16_t APM CRCTable[]=
+const prog_uint16_t APM CRCTable[]=
 {
     0x0000,0x1189,0x2312,0x329b,0x4624,0x57ad,0x6536,0x74bf,
     0x8c48,0x9dc1,0xaf5a,0xbed3,0xca6c,0xdbe5,0xe97e,0xf8f7,
